--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/320af784e1.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="dist/css/main.css" />
     <title>Welcome to My Portfolio</title>
   </head>
   <body id="bg-img">
@@ -29,17 +29,17 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link">
+            <a href="./dist/about.html" class="nav-link">
               About Me
             </a>
           </li>
           <li class="nav-item">
-            <a href="work.html" class="nav-link">
+            <a href="./dist/work.html" class="nav-link">
               My Work
             </a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">
+            <a href="./dist/contact.html" class="nav-link">
               How To Reach Me
             </a>
           </li>
@@ -68,6 +68,6 @@
       </div>
     </main>
 
-    <script src="js/main.js"></script>
+    <script src="dist/js/main.js"></script>
   </body>
 </html>
