Web content edit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <ul class="menu-nav">
           <li class="nav-item current">
-            <a href="/" class="nav-link">
+            <a href="./index.html" class="nav-link">
               Home
             </a>
           </li>
@@ -48,7 +48,7 @@
     </header>
 
     <main id="home">
-      <h1 class="lg-heading">Tina <span class="text-secondary">Yang</span></h1>
+      <h1 class="lg-heading">Xiexu <span class="text-secondary">Chen</span></h1>
       <h2 class="sm-heading">
         Web Developer, Programmer, Designer & Entrepreneur
       </h2>
@@ -56,13 +56,13 @@
         <a href="#I">
           <i class="fab fa-twitter fa-2x"></i>
         </a>
-        <a href="#I">
+        <a href="https://www.facebook.com/profile.php?id=100011499607808">
           <i class="fab fa-facebook fa-2x"></i>
         </a>
-        <a href="#I">
+        <a href="https://www.linkedin.com/in/liam-chen">
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
-        <a href="#I">
+        <a href="https://github.com/Liamxiexuc">
           <i class="fab fa-github fa-2x"></i>
         </a>
       </div>
